Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/codecparsers/h/gstmpegvideoparser.pp


{*
 * GstMpegVideoSequenceDisplayExt:
 * @video_format: 3-bit video_format field indicating PAL/NTSC etc.
 * @colour_description_flag: %TRUE if colour information was provided
 * @colour_primaries: Valid if colour_description_flag is set
 * @transfer_characteristics: Valid if colour_description_flag is set
 * @matrix_coefficients: Valid if colour_description_flag is set
 * @display_horizontal_size: width of decoded frame sub-region to display
 * @display_vertical_size: height of decoded frame sub-region to display
  }
{ if colour_description_flag:  }
  PGstMpegVideoSequenceDisplayExt = ^TGstMpegVideoSequenceDisplayExt;
  TGstMpegVideoSequenceDisplayExt = record
      video_format : Tguint8;
      colour_description_flag : Tguint8;
      colour_primaries : Tguint8;
      transfer_characteristics : Tguint8;
      matrix_coefficients : Tguint8;
      display_horizontal_size : Tguint16;
      display_vertical_size : Tguint16;
    end;

{*
 * GstMpegVideoSequenceScalableExt:
 * @scalable_mode:
 * @layer_id:
 * @lower_layer_prediction_horizontal_size:
 * @lower_layer_prediction_vertical_size:
 * @horizontal_subsampling_factor_m:
 * @horizontal_subsampling_factor_n:
 * @vertical_subsampling_factor_m:
 * @vertical_subsampling_factor_n:
 * @picture_mux_enable:
 * @mux_to_progressive_sequence:
 * @picture_mux_order:
 * @picture_mux_factor:
 *
 * The Sequence Scalable Extension structure.
 *
 * Since: 1.2
  }
{ if spatial scalability  }
{ if temporal scalability  }
  PGstMpegVideoSequenceScalableExt = ^TGstMpegVideoSequenceScalableExt;
  TGstMpegVideoSequenceScalableExt = record
      scalable_mode : Tguint8;
      layer_id : Tguint8;
      lower_layer_prediction_horizontal_size : Tguint16;
      lower_layer_prediction_vertical_size : Tguint16;
      horizontal_subsampling_factor_m : Tguint8;
      horizontal_subsampling_factor_n : Tguint8;
      vertical_subsampling_factor_m : Tguint8;
      vertical_subsampling_factor_n : Tguint8;
      picture_mux_enable : Tguint8;
      mux_to_progressive_sequence : Tguint8;
      picture_mux_order : Tguint8;
      picture_mux_factor : Tguint8;
    end;

{*
 * GstMpegVideoQuantMatrixExt:
 * @load_intra_quantiser_matrix:
 * @intra_quantiser_matrix:
 * @load_non_intra_quantiser_matrix:
 * @non_intra_quantiser_matrix:
 * @load_chroma_intra_quantiser_matrix:
 * @chroma_intra_quantiser_matrix:
 * @load_chroma_non_intra_quantiser_matrix:
 * @chroma_non_intra_quantiser_matrix:
 *
 * The Quant Matrix Extension structure that exposes quantization
 * matrices in zigzag scan order. i.e. the original encoded scan
 * order.
  }
  PGstMpegVideoQuantMatrixExt = ^TGstMpegVideoQuantMatrixExt;
  TGstMpegVideoQuantMatrixExt = record
      load_intra_quantiser_matrix : Tguint8;
      intra_quantiser_matrix : array[0..63] of Tguint8;
      load_non_intra_quantiser_matrix : Tguint8;
      non_intra_quantiser_matrix : array[0..63] of Tguint8;
      load_chroma_intra_quantiser_matrix : Tguint8;
      chroma_intra_quantiser_matrix : array[0..63] of Tguint8;
      load_chroma_non_intra_quantiser_matrix : Tguint8;
      chroma_non_intra_quantiser_matrix : array[0..63] of Tguint8;
    end;

{*
 * GstMpegVideoPictureHdr:
 * @tsn: Temporal Sequence Number
 * @pic_type: Type of the frame
 * @full_pel_forward_vector: the full pel forward flag of
 *  the frame: 0 or 1.
 * @full_pel_backward_vector: the full pel backward flag
 *  of the frame: 0 or 1.
 * @f_code: F code
 *
 * The Mpeg2 Video Picture Header structure.
  }
  PGstMpegVideoPictureHdr = ^TGstMpegVideoPictureHdr;
  TGstMpegVideoPictureHdr = record
      tsn : Tguint16;
      pic_type : Tguint8;
      vbv_delay : Tguint16;
      full_pel_forward_vector : Tguint8;
      full_pel_backward_vector : Tguint8;
      f_code : array[0..1] of array[0..1] of Tguint8;
    end;

{*
 * GstMpegVideoPictureExt:
 * @intra_dc_precision: Intra DC precision
 * @picture_structure: Structure of the picture
 * @top_field_first: Top field first
 * @frame_pred_frame_dct: Frame
 * @concealment_motion_vectors: Concealment Motion Vectors
 * @q_scale_type: Q Scale Type
 * @intra_vlc_format: Intra Vlc Format
 * @alternate_scan: Alternate Scan
 * @repeat_first_field: Repeat First Field
 * @chroma_420_type: Chroma 420 Type
 * @progressive_frame: %TRUE if the frame is progressive %FALSE otherwise
 *
 * The Mpeg2 Video Picture Extension structure.
  }
  PGstMpegVideoPictureExt = ^TGstMpegVideoPictureExt;
  TGstMpegVideoPictureExt = record
      f_code : array[0..1] of array[0..1] of Tguint8;
      intra_dc_precision : Tguint8;
      picture_structure : Tguint8;
      top_field_first : Tguint8;
      frame_pred_frame_dct : Tguint8;
      concealment_motion_vectors : Tguint8;
      q_scale_type : Tguint8;
      intra_vlc_format : Tguint8;
      alternate_scan : Tguint8;
      repeat_first_field : Tguint8;
      chroma_420_type : Tguint8;
      progressive_frame : Tguint8;
      composite_display : Tguint8;
      v_axis : Tguint8;
      field_sequence : Tguint8;
      sub_carrier : Tguint8;
      burst_amplitude : Tguint8;
      sub_carrier_phase : Tguint8;
    end;

{*
 * GstMpegVideoGop:
 * @drop_frame_flag: Drop Frame Flag
 * @hour: Hour (0-23)
 * @minute: Minute (O-59)
 * @second: Second (0-59)
 * @frame: Frame (0-59)
 * @closed_gop: Closed Gop
 * @broken_link: Broken link
 *
 * The Mpeg Video Group of Picture structure.
  }
  PGstMpegVideoGop = ^TGstMpegVideoGop;
  TGstMpegVideoGop = record
      drop_frame_flag : Tguint8;
      hour : Tguint8;
      minute : Tguint8;
      second : Tguint8;
      frame : Tguint8;
      closed_gop : Tguint8;
      broken_link : Tguint8;
    end;

{*
 * GstMpegVideoSliceHdr:
 * @vertical_position: slice vertical position
 * @vertical_position_extension: Extension to slice_vertical_position
 * @priority_breakpoint: Point where the bitstream shall be partitioned
 * @quantiser_scale_code: Quantiser value (range: 1-31)
 * @slice_ext_flag: Slice Extension flag
 * @intra_slice: Equal to one if all the macroblocks are intra macro blocks.
 * @slice_picture_id_enable: controls the semantics of slice_picture_id
 * @slice_picture_id: Intended to aid recovery on severe bursts of
 *   errors for certain types of applications
 *
 * The Mpeg2 Video Slice Header structure.
 *
 * Since: 1.2
  }
{ Calculated values  }
{ slice_header size in bits  }
{ macroblock row  }
{ macroblock column  }
  PGstMpegVideoSliceHdr = ^TGstMpegVideoSliceHdr;
  TGstMpegVideoSliceHdr = record
      vertical_position : Tguint8;
      vertical_position_ext : Tguint8;
      priority_breakpoint : Tguint8;
      quantiser_scale_code : Tguint8;
      slice_ext_flag : Tguint8;
      intra_slice : Tguint8;
      slice_picture_id_enable : Tguint8;
      slice_picture_id : Tguint8;
      header_size : Tguint;
      mb_row : Tgint;
      mb_column : Tgint;
    end;

{*
 * GstMpegVideoPacket:
 * @type: the type of the packet that start at @offset, as a #GstMpegVideoPacketTypeCode
 * @data: the data containing the packet starting at @offset
 * @offset: the offset of the packet start in bytes from @data. This is the
 *     start of the packet itself without the sync code
 * @size: The size in bytes of the packet or -1 if the end wasn't found. This
 *     is the size of the packet itself without the sync code
 *
 * A structure that contains the type of a packet, its offset and its size
  }
(* Const before type ignored *)
  PGstMpegVideoPacket = ^TGstMpegVideoPacket;
  TGstMpegVideoPacket = record
      data : Pguint8;
      _type : Tguint8;
      offset : Tguint;
      size : Tgint;
    end;

(* Const before type ignored *)

function gst_mpeg_video_parse(packet:PGstMpegVideoPacket; data:Pguint8; size:Tgsize; offset:Tguint):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mpeg_video_packet_parse_sequence_header(packet:PGstMpegVideoPacket; seqhdr:PGstMpegVideoSequenceHdr):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mpeg_video_packet_parse_sequence_extension(packet:PGstMpegVideoPacket; seqext:PGstMpegVideoSequenceExt):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mpeg_video_packet_parse_sequence_display_extension(packet:PGstMpegVideoPacket; seqdisplayext:PGstMpegVideoSequenceDisplayExt):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mpeg_video_packet_parse_sequence_scalable_extension(packet:PGstMpegVideoPacket; seqscaleext:PGstMpegVideoSequenceScalableExt):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mpeg_video_packet_parse_picture_header(packet:PGstMpegVideoPacket; pichdr:PGstMpegVideoPictureHdr):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mpeg_video_packet_parse_picture_extension(packet:PGstMpegVideoPacket; picext:PGstMpegVideoPictureExt):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mpeg_video_packet_parse_gop(packet:PGstMpegVideoPacket; gop:PGstMpegVideoGop):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mpeg_video_packet_parse_slice_header(packet:PGstMpegVideoPacket; slice_hdr:PGstMpegVideoSliceHdr; seq_hdr:PGstMpegVideoSequenceHdr; seqscaleext:PGstMpegVideoSequenceScalableExt):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mpeg_video_packet_parse_quant_matrix_extension(packet:PGstMpegVideoPacket; quant:PGstMpegVideoQuantMatrixExt):Tgboolean;cdecl;external;
{ seqext and displayext may be NULL if not received  }
function gst_mpeg_video_finalise_mpeg2_sequence_header(hdr:PGstMpegVideoSequenceHdr; seqext:PGstMpegVideoSequenceExt; displayext:PGstMpegVideoSequenceDisplayExt):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure gst_mpeg_video_quant_matrix_get_raster_from_zigzag(out_quant:array[0..63] of Tguint8; quant:array[0..63] of Tguint8);cdecl;external;
(* Const before type ignored *)
procedure gst_mpeg_video_quant_matrix_get_zigzag_from_raster(out_quant:array[0..63] of Tguint8; quant:array[0..63] of Tguint8);cdecl;external;
{$endif}

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_MPEG_VIDEO_PACKET_IS_SLICE(typecode : longint) : longint;
begin
  GST_MPEG_VIDEO_PACKET_IS_SLICE:=(typecode>=(GST_MPEG_VIDEO_PACKET_SLICE_MIN and (@(typecode))))<=GST_MPEG_VIDEO_PACKET_SLICE_MAX;
end;


end.
